--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 streamlit
 python-dotenv
-langchain
+langchain==0.2.16
 langchain-openai
 langchain-community
-langchain-chains
 chromadb
 pypdf
 openai
 tiktoken
+pysqlite3-binary
